# MathEngine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  math_engine.cpp  math_engine.h
mathengine/: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixColumn.cpp  MatrixColumn.h  MatrixColumnIterator.cpp  MatrixColumnIterator.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h  math_engine.cpp  math_engine.h
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_matrix.cpp  test_quaternion.cpp  test_vector.cpp
tests/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
